// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should report error on invalid format for package.json 1`] = `
"bun install
foo
^
error: Unexpected foo
    at [dir]/package.json:1:1 0
ParserError parsing package.json in "[dir]/"
"
`;

exports[`should report error on invalid format for dependencies 1`] = `
"bun install
{"name":"foo","version":"0.0.1","dependencies":[]}
                                ^
error: dependencies expects a map of specifiers, e.g.
"dependencies": {
  "bun": "latest"
}
    at [dir]/package.json:1:33 32
"
`;

exports[`should report error on invalid format for optionalDependencies 1`] = `
"bun install
{"name":"foo","version":"0.0.1","optionalDependencies":"bar"}
                                ^
error: optionalDependencies expects a map of specifiers, e.g.
"optionalDependencies": {
  "bun": "latest"
}
    at [dir]/package.json:1:33 32
"
`;

exports[`should report error on invalid format for workspaces 1`] = `
"bun install
{"name":"foo","version":"0.0.1","workspaces":{"packages":{"bar":true}}}
                                ^
error: Workspaces expects an array of strings, e.g.
"workspaces": [
  "path/to/package"
]
    at [dir]/package.json:1:33 32
"
`;

exports[`should report error on duplicated workspace packages 1`] = `
"bun install
{"name":"foo","version":"0.0.1","workspaces":["bar","baz"]}
^
error: Workspace name "moo" already exists
    at [dir]/package.json:1:1 0
"
`;
